tests/baselines/reference/incompleteObjectLiteral1.errors.txt
tests/cases/compiler/incompleteObjectLiteral1.ts(1,14): error TS1005: ':' expected.


==== tests/cases/compiler/incompleteObjectLiteral1.ts (1 errors) ====
    var tt = { aa; }
                 ~
!!! error TS1005: ':' expected.
    var x = tt;